# MX_FFmpeg

./: README
ffmpeg/JNI/ffmpeg/: CMakeLists.txt  c1.h  config.asm  config.fate  config.h  config.mak  configure
ffmpeg/JNI/ffmpeg/compat/: strtod.d
ffmpeg/JNI/ffmpeg/doc/: config.texi
ffmpeg/JNI/ffmpeg/ffbuild/: config.fate  config.mak  config.sh
ffmpeg/JNI/ffmpeg/libavcodec/: 012v.d  4xm.d  8bps.d  8svx.d  aac_ac3_parser.d  aac_adtstoasc_bsf.d  aac_parser.d  aacdec.d  aacdec_fixed.d  aacps_fixed.d  aacps_float.d  aacpsdsp_fixed.d  aacpsdsp_float.d  aacsbr.d  aacsbr_fixed.d  aactab.d  aasc.d  ac3.d  ac3_parser.d  ac3dec_data.d  ac3dec_fixed.c  ac3dec_fixed.d  ac3dec_float.c  ac3dec_float.d  ac3dsp.d  ac3tab.d  acelp_filters.d  acelp_pitch_delay.d  acelp_vectors.d  adpcm.d  adts_header.d  adts_parser.d  adx.d  adx_parser.d  agm.d  aic.d  alac.d  alac_data.d  alacdsp.d  aliaspixdec.d  (+556 more)
ffmpeg/JNI/ffmpeg/libavdevice/: libavdevice.pc
ffmpeg/JNI/ffmpeg/libavfilter/: allfilters.d  audio.d  avfilter.d  avfiltergraph.d  buffersink.d  buffersrc.d  drawutils.c  drawutils.d  fifo.d  filter_list.c  formats.d  framepool.d  framequeue.d  graphdump.d  graphparser.d  libavfilter.pc  pthread.d  transform.d  vf_w3fdif.d  vf_yadif.d  video.d  yadif_common.d
ffmpeg/JNI/ffmpeg/libavformat/: 3dostr.d  4xm.d  Makefile  aacdec.d  aadec.d  acm.d  act.d  adp.d  ads.d  adxdec.d  aea.d  afc.d  aiffdec.d  aixdec.d  allformats.c  allformats.d  alp.d  amr.d  anm.d  apc.d  ape.d  apetag.d  apm.d  apngdec.d  aptxdec.d  aqtitledec.d  argo_asf.d  asf.d  asfcrypt.d  asfdec_f.d  asfdec_o.d  assdec.d  ast.d  astdec.d  async.d  au.d  av1dec.d  avc.d  avformat.h  avidec.d  (+339 more)
ffmpeg/JNI/ffmpeg/libavutil/: adler32.d  aes.d  aes_ctr.d  audio_fifo.d  avsscanf.d  avstring.d  base64.d  blowfish.d  bprint.d  buffer.d  camellia.d  cast5.d  channel_layout.d  color_utils.d  cpu.d  crc.d  des.d  dict.d  display.d  downmix_info.d  encryption_info.d  error.d  eval.d  ffversion.h  fifo.d  file.d  file_open.d  fixed_dsp.d  float_dsp.d  frame.d  hash.d  hdr_dynamic_metadata.d  hmac.d  hwcontext.d  imgutils.c  imgutils.d  integer.d  intmath.d  lfg.d  libavutil.pc  (+36 more)
ffmpeg/JNI/ffmpeg/libswresample/: audioconvert.c  audioconvert.d  dither.d  libswresample.pc  options.d  rematrix.d  resample.d  resample_dsp.d  swresample.d  swresample_frame.d
ffmpeg/JNI/ffmpeg/libswscale/: alphablend.d  gamma.d  hscale.d  hscale_fast_bilinear.d  input.d  libswscale.pc  options.d  output.d  rgb2rgb.d  slice.d  swscale.d  swscale_unscaled.d  utils.d  vscale.d  yuv2rgb.d
ffmpeg/JNI/libmodplug/: .gitignore  CMakeLists.txt  Makefile  Makefile.in  config.status  configure  configure.ac  libmodplug.pc  libtool
ffmpeg/JNI/libmodplug/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
ffmpeg/JNI/libmodplug/src/: Makefile  Makefile.in  config.h  config.h.in  load_abc.cpp  load_amf.cpp  load_it.cpp  load_mid.cpp  load_pat.cpp  sndfile.cpp
ffmpeg/JNI/libsmb2/: CMakeLists.txt  Makefile.am  README  config.h.in~  config.status  configure.ac  libsmb2.pc  libtool
ffmpeg/JNI/libsmb2/autom4te.cache/: output.3  requests  traces.0
ffmpeg/JNI/libsmb2/cmake/: ConfigureChecks.cmake  config.h.cmake
ffmpeg/JNI/libsmb2/examples/: CMakeLists.txt  Makefile  Makefile.am  smb2-CMD-FIND.c  smb2-cat-sync.c  smb2-dcerpc-coder-test.c  smb2-ls-async.c  smb2-lsa-lookupsids.c  smb2-put-async.c  smb2-put-sync.c  smb2-raw-fsstat-async.c  smb2-raw-getsd-async.c  smb2-raw-stat-async.c  smb2-share-enum.c  smb2-share-info.c
ffmpeg/JNI/libsmb2/include/: Makefile  Makefile.am  libsmb2-private.h  portable-endian.h  slist.h
ffmpeg/JNI/libsmb2/lib/: CMakeLists.txt  Makefile  Makefile.am  aes.c  aes.h  aes128ccm.c  aes128ccm.h  alloc.c  compat.c  compat.h  dcerpc-lsa.c  dcerpc-srvsvc.c  dcerpc.c  errors.c  hmac-md5.c  hmac-md5.h  hmac.c  init.c  krb5-wrapper.h  libsmb2.c  libsmb2.syms  libsmb2_la-aes128ccm.lo  libsmb2_la-compat.lo  libsmb2_la-dcerpc-lsa.lo  libsmb2_la-hmac.lo  libsmb2_la-init.lo  libsmb2_la-krb5-wrapper.lo  libsmb2_la-md5.lo  libsmb2_la-sha384-512.lo  libsmb2_la-smb2-cmd-echo.lo  libsmb2_la-smb2-cmd-error.lo  libsmb2_la-smb2-cmd-logoff.lo  libsmb2_la-smb2-cmd-negotiate.lo  libsmb2_la-smb2-cmd-query-info.lo  libsmb2_la-smb2-cmd-session-setup.lo  libsmb2_la-smb2-cmd-set-info.lo  libsmb2_la-smb2-cmd-tree-connect.lo  libsmb2_la-smb2-cmd-tree-disconnect.lo  libsmb2_la-smb2-cmd-write.lo  libsmb2_la-smb2-data-file-info.lo  (+43 more)
ffmpeg/JNI/zvbi-0.2.35/: AUTHORS  BUGS  COPYING.LIB  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h  config.h.in  config.h~  config.status  configure  configure.in  libtool  magic.mgc  pci.ids  site_def.h  usb.ids  zvbi-0.2.pc  zvbi-0.2.pc.in  zvbi.spec  zvbi.spec.in
ffmpeg/JNI/zvbi-0.2.35/contrib/: Makefile  Makefile.am  Makefile.in  README  atsc-cc.c  dvbsubs.c  dvbsubs.h  ntsc-cc.c  x11font.c  zvbi-atsc-cc.1  zvbi-ntsc-cc.1
ffmpeg/JNI/zvbi-0.2.35/daemon/: Makefile  Makefile.am  Makefile.in  README  chains.c  proxyd.c  zvbi-chains.1  zvbid.1  zvbid.init  zvbid.init.in
ffmpeg/JNI/zvbi-0.2.35/doc/: Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  zvbi_525.ps  zvbi_625.ps
ffmpeg/JNI/zvbi-0.2.35/examples/: Makefile  Makefile.am  Makefile.in  network.c  pdc1.c  pdc2-test1.sh  pdc2.c  rawout.c  wss.c
ffmpeg/JNI/zvbi-0.2.35/m4/: Makefile  Makefile.am  Makefile.in  autogen.sh
ffmpeg/JNI/zvbi-0.2.35/po/: LINGUAS  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  de.gmo  de.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  es.gmo  es.po  fr.gmo  fr.po  it.gmo  it.po  nl.gmo  nl.po  pl.gmo  pl.po  zvbi.pot
ffmpeg/JNI/zvbi-0.2.35/src/: Makefile  Makefile.am  Makefile.in  _videodev.h  _videodev2.h  _videodev2k.h  bcd.h  bit_slicer.c  bit_slicer.h  cache-priv.h  cache.c  cache.h  caption.c  cc.h  cc608_decoder.c  cc608_decoder.h  ccfont2.xbm  chains.c  conv.c  conv.h  decoder.c  decoder.h  dlist.h  dvb.h  dvb_demux.c  dvb_demux.h  dvb_mux.c  dvb_mux.h  event-priv.h  event.c  event.h  exp-gfx.c  (+78 more)
ffmpeg/jni/ffmpeg/: CMakeLists.txt  config.asm  config.h  configure
(+811 files in other folders)
